# todo_app

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md  TodoApp.sln  build.sh  test.sh  validate_architecture.sh  vcpkg.json
TodoClient/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  TodoClient.csproj  TodoService.cs  TodoViewModel.cs
TodoConsoleClient/: Program.cs  TodoConsoleClient.csproj
TodoServer/: TodoServer.vcxproj  main.cpp  todo_item.cpp  todo_item.h  todo_server_impl.cpp  todo_server_impl.h
client/TodoClient/: MainWindow.xaml  MainWindow.xaml.cs  Models.cs  Program.cs  TodoClient.csproj  TodoService.cs  TodoViewModel.cs
client/TodoConsoleClient/: Program.cs
proto/: todo.proto
server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  todo_item.cpp  todo_item.h  todo_server  todo_server.cpp  todo_server.h
